# wikipedia-page-views

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: fetch.yml  run.yml  test_retrigger.yml
.state/local/: page_views.json
assets/page_views/: page_views.py  test.py
catalog/: status.json
data/: chart_mapping.json  entities_to_track.csv
src/: connector_utils.py  main.py  manage_charts.py
src/ingest/: page_views.py
src/nodes/: page_views.py  transform.py
src/subsets_utils/: delta.py  io.py  orchestrator.py  r2.py  runner.py
src/transforms/page_views/: main.py  test.py
utils/: __init__.py  http_client.py  io.py
