[project]
name = "wikipedia-page-views"
version = "0.1.0"
description = "Wikipedia page views data connector"
requires-python = ">=3.11"
dependencies = [ "boto3>=1.34.0", "duckdb>=0.10.0", "httpx>=0.27.0", "pyarrow>=21.0.0", "pyiceberg", "ratelimit>=2.2.1", "requests", "tenacity>=8.0.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "assets", "utils",]
