[project]
name = "wikipedia-page-views"
version = "0.1.0"
description = "Wikipedia page views data connector"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "psutil>=5.9.0",
    "boto3>=1.34.0",
    "duckdb>=0.10.0",
    "httpx>=0.27.0",
    "pyarrow>=21.0.0",
    "deltalake>=0.17.0",
    "tenacity>=8.0.0",
]
